--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ awsebcli = "*"
 django = "*"
 djangorestframework = "*"
 psycopg2-binary = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.7"
