--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2019.9.11
 chardet==3.0.4
 colorama==0.3.9
 Django==2.2.7
+django-filter==2.2.0
 djangorestframework==3.10.3
 docker==3.7.3
 docker-compose==1.23.2
