--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django = "*"
 djangorestframework = "*"
 psycopg2-binary = "*"
 django-filter = "*"
+djangorestframework-xml = "*"
 
 [requires]
 python_version = "3.7"
