Updates to logging, settings and eb config.

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -7,10 +7,14 @@ container_commands:
     leader_only: true
   03_collectstatic:
     command: "python manage.py collectstatic --noinput"
+    leader_only: true
 option_settings:
-  "aws:elasticbeanstalk:application:environment":
+  aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: "rehook.production_settings"
-  "aws:elasticbeanstalk:container:python":
-    WSGIPath: rehook/wsgi.py
-  "aws:elasticbeanstalk:container:python:staticfiles":
-    /static/: www/static/
+  aws:elasticbeanstalk:container:python:
+    WSGIPath: rehook.wsgi:application
+  aws:elasticbeanstalk:environment:process:default:
+    HealthCheckPath: "/api/health"
+    MatcherHTTPCode: "200-499"
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
+    /static: static
